Update index.html with new Medium.com story Small Business Needs DS

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h2>Blog</h2>
         <p>Stay updated with our latest insights, case studies, and industry trends in the world of data science and business
             optimization.</p>
-        <p><a href="#">How Data Analytics is Changing the Business Landscape</a></p>
+        <p><a href="https://medium.com/@linked.lauren/why-small-business-needs-data-scientists-e77bfa820781">Why Small Business Needs Data Scientist</a></p>
         <p><a href="#">The Benefits of Predictive Modeling for Small Businesses</a></p>
         <p><a href="#">5 Key Metrics Every Business Should Track</a></p>
     </section>
