fill boilerplate email with actual

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <p>We’d love to hear from you. If you have any questions or need more information, feel free to reach out.</p>
-        <p>Email us at <a href="mailto:info@consultingfirm.com">info@consultingfirm.com</a> or call us at (123) 456-7890.</p>
-        <a href="mailto:info@consultingfirm.com" class="cta-button">Email Us</a>
+        <p>Email us at <a href="mailto:databylauren01@gmail.com">databylauren@gmail.com</a></p>
+        <a href="mailto:databylauren@gmail.com" class="cta-button">Email Us</a>
     </section>
 
     <!-- Footer Section -->
