Big push with new changes keeping old changes in old files directory

--- a/old_files/portfolio.html
+++ b/old_files/portfolio.html
@@ -144,7 +144,7 @@
       <a href="tools.html">AI Tools</a>
       <a href="portfolio.html">Portfolio</a>
       <a href="garden.html">Lanai Garden</a>
-      <a href="mailto:lauren@example.com">Contact</a>
+      <a href="mailto:databylauren01@gmail.com">Contact</a>
     </nav>
   </header>
 
@@ -167,7 +167,7 @@
     <div class="timeline-container right">
       <div class="timeline-box">
         <strong>Aug 2018</strong><br>
-        📚 Returned to UTSA full-time, driven to break into tech. Explored everything from networking and digital forensics to systems administration and, ultimately, data analytics—the spark that lit the path forward.
+        📚 Returned to the University of Texas at San Antonio full-time, driven to break into tech. Explored everything from networking and digital forensics to systems administration and, ultimately, data analytics—the spark that lit the path forward.
       </div>
     </div>
 
@@ -182,7 +182,7 @@
     <div class="timeline-container right">
       <div class="timeline-box">
         <strong>Aug 2020</strong><br>
-        💡  Encouraged by a professor to pursue the Master's in Data Analytics. With their support, I was accepted into the program—marking the beginning of my journey into data science.
+        💡  Encouraged by a professor to pursue a Master's in Data Analytics. With their support, I was accepted into the program—marking the beginning of my journey into data science.
       </div>
     </div>
 
