Updates to align headers across pages

--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
   <header>
     <div class="brand">Manai Analytics</div>
     <nav aria-label="primary">
+     <a href="about.html">About Us</a>
       <a href="index.html">Pricing</a>
-      <a href="projects.html">Projects</a>
-      <a href="about.html">About</a>
-      <a href="contact.html" aria-current="page">Contact</a>
+      <a href="projects.html" aria-current="page">Projects</a>
+      <a href="contact.html" aria-current="page">Contact Us</a>
     </nav>
   </header>
 
