Updates to new pricing page

--- a/about.html
+++ b/about.html
@@ -1,3 +1,6 @@
+
+
+
 <!-- =========================
    about.html — About page only
    ========================= -->
@@ -14,9 +17,9 @@
     <div class="brand">Manai Analytics</div>
     <nav aria-label="primary">
       <a href="about.html">About Us</a>
-      <a href="index.html">Pricing</a>
-      <a href="projects.html" aria-current="page">Projects</a>
-      <a href="contact.html" aria-current="page">Contact Us</a>
+      <a href="index.html" aria-current="page">Pricing</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
   </header>
 
@@ -33,7 +36,7 @@
         Always built with intention. Always human. Always with aloha.
       </p>
       <div class="signature">
-        <div class="signature-name"> - Lauren Wilson</div>
+        <div class="signature-name">Lauren Wilson</div>
         <div class="signature-role muted">Data Scientist &amp; Efficiency Consultant</div>
       </div>
     </section>
