--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!-- =========================
    index.html — Pricing only (Landing)
    ========================= -->
@@ -15,43 +14,58 @@
   <header>
     <div class="brand">Manai Analytics</div>
     <nav aria-label="primary">
-       <a href="about.html">About Us</a>
-      <a href="index.html">Pricing</a>
-      <a href="projects.html" aria-current="page">Projects</a>
-      <a href="contact.html" aria-current="page">Contact Us</a>
+      <a href="about.html">About Us</a>
+      <a href="index.html" aria-current="page">Pricing</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
   </header>
 
   <main>
-    <h1>Pricing to fit your needs.</h1>
+    <h1>Clear, simple pricing.</h1>
     <h2>Choose the level of support that matches where you are today—whether you’re just getting started, building steady momentum, or ready for a true data partner.</h2>
 
     <section class="tiers" aria-label="pricing tiers">
       <article class="card tier1">
         <div class="bar"></div>
         <div class="kicker">Foundations</div>
-        <h3>Start clean</h3>
+        <h3>✨ Start Clean</h3>
         <p class="muted">For businesses who need clarity and structure before growth.</p>
-        <p>👉 Setups, process mapping, and light redesigns. We’ll establish a strong data foundation: remove friction, document the essentials, and make sure your information flows in a way that supports decision-making.</p>
-        <p>🔹 <em>Best for:</em> First-time dashboard builds, system overhauls, or new businesses getting organized.</p>
+        <ul class="highlights">
+          <li>Setups, process mapping, and light redesigns</li>
+          <li>Establish a strong data foundation</li>
+          <li>Remove friction, document the essentials</li>
+          <li>Ensure your information flows smoothly</li>
+        </ul>
+        <p class="best-for"><em>Best for:</em> First-time dashboard builds, system overhauls, or new businesses getting organized.</p>
       </article>
 
       <article class="card tier2">
         <div class="bar"></div>
         <div class="kicker">Cadence</div>
-        <h3>Steady momentum</h3>
+        <h3>📈 Steady Momentum</h3>
         <p class="muted">For leaders who want consistent visibility without constant overhead.</p>
-        <p>👉 Quarterly reviews and strategy checkpoints. Roadmaps, small lifts, measurable wins—without bloat. We’ll monitor KPIs, refresh dashboards, and keep your analytics tuned so you stay on track.</p>
-        <p>🔹 <em>Best for:</em> Teams who want accountability and ongoing insight without hiring in-house.</p>
+        <ul class="highlights">
+          <li>Quarterly reviews & strategy checkpoints</li>
+          <li>KPI monitoring and dashboard refreshes</li>
+          <li>Small, regular lifts that compound</li>
+          <li>Clear roadmaps and accountability</li>
+        </ul>
+        <p class="best-for"><em>Best for:</em> Teams who want ongoing insight and guidance without hiring in-house.</p>
       </article>
 
       <article class="card tier3">
         <div class="bar"></div>
         <div class="kicker">Partnership</div>
-        <h3>Embedded support</h3>
+        <h3>🤝 Embedded Support</h3>
         <p class="muted">For organizations ready to treat analytics as a growth driver.</p>
-        <p>👉 Hands-on collaboration across planning and execution. I work alongside your team to design systems, automate reporting, and align analytics with business goals. Fewer meetings, clearer outcomes, and a partner who builds with you—not just for you.</p>
-        <p>🔹 <em>Best for:</em> Businesses scaling operations, managing multiple data sources, or needing advanced forecasting.</p>
+        <ul class="highlights">
+          <li>Hands-on collaboration across planning & execution</li>
+          <li>System design, automation, & scalable reporting</li>
+          <li>Align analytics tightly with business goals</li>
+          <li>Fewer meetings, clearer outcomes</li>
+        </ul>
+        <p class="best-for"><em>Best for:</em> Businesses scaling operations, integrating multiple data sources, or needing advanced forecasting.</p>
       </article>
     </section>
   </main>
@@ -61,8 +75,6 @@
   </footer>
 </body>
 </html>
-
-
 
 
 
