--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,9 @@
     <div class="brand">Manai Analytics</div>
     <nav aria-label="primary">
       <a href="about.html">About Us</a>
-      <a href="index.html">Pricing</a>
-      <a href="projects.html" aria-current="page">Projects</a>
-      <a href="contact.html" aria-current="page">Contact Us</a>
+      <a href="index.html" aria-current="page">Pricing</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
   </header>
 
@@ -48,7 +48,9 @@
       </article>
     </section>
 
-    <section style="margin-top:28px">
+    <section class="section-divider"></section>
+
+    <section>
       <div class="kicker">Data Science</div>
       <h2>ROI & Impact Analytics</h2>
       <p class="muted">Focused, comparable analyses to quantify lift and clarity.</p>
