Update branding from Manai to Eai Analytics. Updated pricing tiers w/ coaching section included

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Manai Analytics — Pricing</title>
+  <title>Eai Analytics — Pricing</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <div class="brand">Manai Analytics</div>
+    <div class="brand">Eai Analytics</div>
     <nav aria-label="primary">
       <a href="about.html">About Us</a>
       <a href="index.html" aria-current="page">Pricing</a>
@@ -22,56 +22,130 @@
   </header>
 
   <main>
-    <h1>Clear, simple pricing.</h1>
-    <h2>Choose the level of support that matches where you are today—whether you’re just getting started, building steady momentum, or ready for a true data partner.</h2>
+  <h1>Clear, simple pricing.</h1>
+  <h2>
+    Practical AI systems and digital confidence coaching —
+    designed to meet you where you are.
+  </h2>
 
-    <section class="tiers" aria-label="pricing tiers">
-      <article class="card tier1">
-        <div class="bar"></div>
-        <div class="kicker">Foundations</div>
-        <h3>✨ Start Clean</h3>
-        <p class="muted">For businesses who need clarity and structure before growth.</p>
-        <ul class="highlights">
-          <li>Setups, process mapping, and light redesigns</li>
-          <li>Establish a strong data foundation</li>
-          <li>Remove friction, document the essentials</li>
-          <li>Ensure your information flows smoothly</li>
-        </ul>
-        <p class="best-for"><em>Best for:</em> First-time dashboard builds, system overhauls, or new businesses getting organized.</p>
-      </article>
+  <section style="margin-top:40px; margin-bottom:40px;">
+    <div class="kicker">Founding Client Opportunity</div>
+    <p class="muted">
+      I’m onboarding a limited number of founding partners at preferred early rates.
+      Founding clients receive priority scheduling and direct engagement in exchange
+      for a testimonial and brief feedback conversation.
+      <br><br>
+      Limited to first 5 engagements.
+    </p>
+  </section>
 
-      <article class="card tier2">
-        <div class="bar"></div>
-        <div class="kicker">Cadence</div>
-        <h3>📈 Steady Momentum</h3>
-        <p class="muted">For leaders who want consistent visibility without constant overhead.</p>
-        <ul class="highlights">
-          <li>Quarterly reviews & strategy checkpoints</li>
-          <li>KPI monitoring and dashboard refreshes</li>
-          <li>Small, regular lifts that compound</li>
-          <li>Clear roadmaps and accountability</li>
-        </ul>
-        <p class="best-for"><em>Best for:</em> Teams who want ongoing insight and guidance without hiring in-house.</p>
-      </article>
+  <section class="tiers" aria-label="consulting tiers">
 
-      <article class="card tier3">
-        <div class="bar"></div>
-        <div class="kicker">Partnership</div>
-        <h3>🤝 Embedded Support</h3>
-        <p class="muted">For organizations ready to treat analytics as a growth driver.</p>
-        <ul class="highlights">
-          <li>Hands-on collaboration across planning & execution</li>
-          <li>System design, automation, & scalable reporting</li>
-          <li>Align analytics tightly with business goals</li>
-          <li>Fewer meetings, clearer outcomes</li>
-        </ul>
-        <p class="best-for"><em>Best for:</em> Businesses scaling operations, integrating multiple data sources, or needing advanced forecasting.</p>
-      </article>
-    </section>
-  </main>
+    <article class="card tier1">
+      <div class="bar"></div>
+      <div class="kicker">Foundation Sprint</div>
+      <h3>✨ Quick Win Implementation</h3>
+      <p class="muted">
+        A focused 4–8 hour engagement to solve one meaningful operational pain point.
+      </p>
+
+      <ul class="highlights">
+        <li>Dashboard build or workflow automation</li>
+        <li>Light data cleanup & structure</li>
+        <li>Implementation walkthrough</li>
+        <li>Clear next-step roadmap</li>
+      </ul>
+
+      <p><strong>$850</strong> — Small Business (Founding Rate)</p>
+      <p><strong>$1,800</strong> — Corporate</p>
+
+      <p class="best-for">
+        <em>Best for:</em> First-time automation, spreadsheet cleanup, KPI visibility.
+      </p>
+    </article>
+
+    <article class="card tier2">
+      <div class="bar"></div>
+      <div class="kicker">Strategic Build</div>
+      <h3>📈 Intelligent System Design</h3>
+      <p class="muted">
+        A 2–6 week engagement to design and implement scalable AI-enabled systems.
+      </p>
+
+      <ul class="highlights">
+        <li>Workflow & data audit</li>
+        <li>System architecture design</li>
+        <li>Predictive models or AI workflows</li>
+        <li>Deployment guidance & documentation</li>
+      </ul>
+
+      <p><strong>$5,800</strong> — Small Business (Founding Rate)</p>
+      <p><strong>$15,000–$25,000</strong> — Corporate</p>
+
+      <p class="best-for">
+        <em>Best for:</em> Revenue forecasting, automation expansion, scalable reporting.
+      </p>
+    </article>
+
+    <article class="card tier3">
+      <div class="bar"></div>
+      <div class="kicker">Embedded Partnership</div>
+      <h3>🤝 Fractional AI Lead</h3>
+      <p class="muted">
+        Ongoing strategic support for organizations treating analytics as a growth driver.
+      </p>
+
+      <ul class="highlights">
+        <li>Monthly strategy sessions</li>
+        <li>Model oversight & iteration</li>
+        <li>Workflow expansion</li>
+        <li>Executive reporting & training</li>
+      </ul>
+
+      <p><strong>$3,000 / month</strong> — Small Business (Founding Rate)</p>
+      <p><strong>$8,000–$15,000 / month</strong> — Corporate</p>
+
+      <p class="best-for">
+        <em>Best for:</em> Scaling operations, multi-source data integration, advanced forecasting.
+      </p>
+    </article>
+
+  </section>
+
+  <section class="section-divider"></section>
+
+  <section>
+    <div class="kicker">Digital Confidence Coaching</div>
+    <h2>AI for Everyday Life</h2>
+    <p class="muted">
+      Designed for non-technical professionals and retirees who want to
+      use AI safely and confidently.
+    </p>
+
+    <div style="margin-top:30px; border:1px solid var(--line); border-radius: var(--radius); padding:24px;">
+      <h3>3-Session Digital Confidence Package</h3>
+
+      <ul class="highlights">
+        <li>Session 1 — AI Foundations & Safety</li>
+        <li>Session 2 — Everyday Practical Use</li>
+        <li>Session 3 — Prompt Skills & Personalization</li>
+        <li>AI Quick Start Guide & reusable prompt templates</li>
+      </ul>
+
+      <p><strong>$250</strong> — Full 3-Session Package</p>
+      <p><strong>$75</strong> Virtual | <strong>$95</strong> In-Person</p>
+
+      <p class="muted" style="margin-top:10px;">
+        If after 3 sessions you don't feel more confident using AI independently, your final session is free!
+      </p>
+    </div>
+  </section>
+
+</main>
+
 
   <footer>
-    <small>© 2025 Manai Analytics</small>
+    <small>© 2025 Eai Analytics</small>
   </footer>
 </body>
 </html>
