Update pricing and engagement details in index.html

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <li>Clear next-step roadmap</li>
       </ul>
 
-      <p><strong>$850</strong> — Small Business (Founding Rate)</p>
-      <p><strong>$1,800</strong> — Corporate</p>
+      <p><strong>$700</strong> — Small Business (Founding Rate)</p>
+      <p><strong>$1,500</strong> — Corporate</p>
 
       <p class="best-for">
         <em>Best for:</em> First-time automation, spreadsheet cleanup, KPI visibility.
@@ -69,7 +69,7 @@
       <div class="kicker">Strategic Build</div>
       <h3>📈 Intelligent System Design</h3>
       <p class="muted">
-        A 2–6 week engagement to design and implement scalable AI-enabled systems.
+        A 40 - 60 hour engagement delivered across 2–6 weeks to design and implement scalable AI-enabled systems.
       </p>
 
       <ul class="highlights">
