Update signature role from 'Efficiency Consultant' to 'AI Systems Consultant'

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       </p>
       <div class="signature">
         <div class="signature-name">Lauren Wilson</div>
-        <div class="signature-role muted">Data Scientist &amp; Efficiency Consultant</div>
+        <div class="signature-role muted">Data Scientist &amp; AI Systems Consultant</div>
       </div>
     </section>
   </main>
