--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Manai Analytics — About</title>
+  <title>Eai Analytics — About</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <div class="brand">Manai Analytics</div>
+    <div class="brand">Eai Analytics</div>
     <nav aria-label="primary">
       <a href="about.html">About Us</a>
       <a href="index.html" aria-current="page">Pricing</a>
@@ -43,7 +43,7 @@
   </main>
 
   <footer>
-    <small>© 2025 Manai Analytics</small>
+    <small>© 2025 Eai Analytics</small>
   </footer>
 </body>
 </html>
