Update branding from Manai to Eai Analytics

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Manai Analytics — Contact</title>
+  <title>Eai Analytics — Contact</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     main { max-width: 760px; }
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <div class="brand">Manai Analytics</div>
+    <div class="brand">Eai Analytics</div>
     <nav aria-label="primary">
      <a href="about.html">About Us</a>
       <a href="index.html" aria-current="page">Pricing</a>
@@ -57,7 +57,7 @@
   </main>
 
   <footer>
-    <small>© 2025 Manai Analytics</small>
+    <small>© 2025 Eai Analytics</small>
   </footer>
 
   <script>
