Remove pricing details from index.html

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <li>Clear next-step roadmap</li>
       </ul>
 
-      <p><strong>$700</strong> — Small Business (Founding Rate)</p>
-      <p><strong>$1,500</strong> — Corporate</p>
+      <p> — Small Business (Founding Rate)</p>
+      <p> — Corporate</p>
 
       <p class="best-for">
         <em>Best for:</em> First-time automation, spreadsheet cleanup, KPI visibility.
@@ -79,8 +79,8 @@
         <li>Deployment guidance & documentation</li>
       </ul>
 
-      <p><strong>$5,800</strong> — Small Business (Founding Rate)</p>
-      <p><strong>$15,000–$25,000</strong> — Corporate</p>
+      <p> — Small Business (Founding Rate)</p>
+      <p> — Corporate</p>
 
       <p class="best-for">
         <em>Best for:</em> Revenue forecasting, automation expansion, scalable reporting.
@@ -102,8 +102,8 @@
         <li>Executive reporting & training</li>
       </ul>
 
-      <p><strong>$3,000 / month</strong> — Small Business (Founding Rate)</p>
-      <p><strong>$8,000–$15,000 / month</strong> — Corporate</p>
+      <p> — Small Business (Founding Rate)</p>
+      <p> — Corporate</p>
 
       <p class="best-for">
         <em>Best for:</em> Scaling operations, multi-source data integration, advanced forecasting.
@@ -132,8 +132,8 @@
         <li>AI Quick Start Guide & reusable prompt templates</li>
       </ul>
 
-      <p><strong>$250</strong> — Full 3-Session Package</p>
-      <p><strong>$75</strong> Virtual | <strong>$95</strong> In-Person</p>
+      <p> — Full 3-Session Package</p>
+      <p> Virtual | <strong>$95</strong> In-Person</p>
 
       <p class="muted" style="margin-top:10px;">
         If after 3 sessions you don't feel more confident using AI independently, your final session is free!
