Update session pricing information in index.html
Removed pricing details for in-person sessions.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </ul>
 
       <p> — Full 3-Session Package</p>
-      <p> Virtual | <strong>$95</strong> In-Person</p>
+      <p> Virtual | In-Person</p>
 
       <p class="muted" style="margin-top:10px;">
         If after 3 sessions you don't feel more confident using AI independently, your final session is free!
